# ml-image-classification-for-beginner

./: .gitignore  README.md  environment.yml  pyproject.toml
src/image_classification_for_beginner/: constants.py  main.py  test_model.py  utils.py
