[tool.poetry]
name = "image-classification-for-beginner"
version = "0.1.0"
description = ""
authors = ["Oleksandr Pronin <pronin.alx@gmail.com>"]
readme = "README.md"
packages = [{include = "image_classification_for_beginner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
