[tool.poetry]
name = "image-classification-for-beginner"
version = "0.1.0"
description = ""
authors = ["Oleksandr Pronin <pronin.alx@gmail.com>"]
readme = "README.md"
packages = [{include = "image_classification_for_beginner", from = "src"}]

[tool.poetry.dependencies]
python = "3.11.7"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.0"
keras = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
